--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         <a-asset-item id="tree" src="assets/tree/scene.gltf"></a-asset-item>
         <a-asset-item id="street_props" src="assets/street_props/scene.gltf"></a-asset-item>
         <a-asset-item id="fence" src="assets/simple_trees/scene.gltf"></a-asset-item>
-        <a-asset-item id="house" src="assets/hayne_street_house/scene.gltf"></a-asset-item>
+        <a-asset-item id="house" src="assets/princelet_street_-_low_poly/scene.gltf"></a-asset-item>
+        <a-asset-item id="house2" src="assets/japanese_apartment/scene.gltf"></a-asset-item>
+        <a-asset-item id="house3" src="assets/building__37._padre_aguirre_9_-_66/scene.gltf"></a-asset-item>
+        <a-asset-item id="house4" src="assets/building_set/scene.gltf"></a-asset-item>
+        <a-asset-item id="car" src="assets/car/scene.gltf"></a-asset-item>
+        <a-asset-item id="car2" src="assets/car2/scene.gltf"></a-asset-item>
 
         <img id = "bg" src = "images/bg.jpg"></img>
 
@@ -68,10 +73,72 @@
 
       <!-- House -->
       <a-entity
-        scale="0.5 0.5 0.5"
+        scale="1.5 1.5 1.5"
         gltf-model="#house"
-        position="-30 7.5 2"
+        position="-30 10 -10"
         shadow="cast:true;"
+      ></a-entity>
+
+      <!-- Tree 2-->
+      <a-entity
+        scale="0.02 0.02 0.02"
+        gltf-model="#tree"
+        position="-30 4 -20"
+        shadow="cast:true;"
+      ></a-entity>
+
+       <!-- House 2 -->
+       <a-entity
+       scale="1.5 1.5 1.5"
+       gltf-model="#house2"
+       position="-30 5.5 20"
+       rotation = "0 90 0"
+       shadow="cast:true;"
+     ></a-entity>
+
+     <!-- House 3-->
+     <a-entity
+     scale="1.5 1.5 1.5"
+     gltf-model="#house3"
+     position="10 3 -20"
+     rotation = "0 90 0"
+     shadow="cast:true;"
+   ></a-entity>
+
+        <!-- House 4-->
+     <a-entity
+     scale="1.5 1.5 1.5"
+     gltf-model="#house4"
+     position="85 3 -20"
+     rotation = "0 90 0"
+     shadow="cast:true;"
+   ></a-entity>
+
+   <!-- House 4-->
+   <a-entity
+   scale="1.5 1.5 1.5"
+   gltf-model="#house4"
+   position="-5 3 20"
+   rotation = "0 -90 0"
+   shadow="cast:true;"
+ ></a-entity>
+
+    <!-- Car-->
+      <a-entity
+      scale="0.3 0.3 0.3"
+      gltf-model="#car"
+      position="20 4 7"
+      rotation = "0 90 0"
+      shadow="cast:true;"
+      ></a-entity>
+
+      <!-- Car 2-->
+      <a-entity
+      scale="0.03 0.03 0.03"
+      gltf-model="#car2"
+      position="10 4 13.5"
+      rotation = "0 180 0"
+      shadow="cast:true;"
       ></a-entity>
 
 
@@ -83,7 +150,7 @@
       <!-- Lights in Scene  -->
       <a-entity
         light="type: point; castShadow: true; color: #e6ca14; intensity: 2.35"
-        position="-5.92951 8.39487 1.29438"
+        position="-5.93 8.4 1.3"
       >
       </a-entity>
       <a-entity light="type: ambient;"> </a-entity>
